# LoopLens

./: .gitignore  Cargo.toml  LOOP.md  README.md
.github/workflows/: ci.yml  testsprite.yml
.looplens/: LOOP.md  config.toml
.looplens/experiences/: exp-001.yaml  exp-002.yaml  exp-003.yaml
.looplens/trajectories/: exp-001.md  exp-002.md  exp-003.md
.testsprite/: looplens-demo-rerun-final-wait-2.json  looplens-demo-run.json  looplens-demo.plan.json
examples/demo-app/: index.html  package-lock.json  package.json
examples/demo-app/src/: App.jsx  styles.css
examples/demo-video/: package-lock.json  package.json
examples/demo-video/src/: index.jsx  style.css
